fix(index.tsx) remove the snap by section on mobile and tablet

--- a/styles/compile.css
+++ b/styles/compile.css
@@ -2118,6 +2118,14 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .lg\:snap-y {
+    scroll-snap-type: y var(--tw-scroll-snap-strictness);
+  }
+
+  .lg\:snap-mandatory {
+    --tw-scroll-snap-strictness: mandatory;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
